# can-gateway-uds

./: .gitignore  .mxproject  CMakeLists.txt  CMakePresets.json  README.md  boongBoong.ioc
.github/workflows/: firmware-ci.yml
Core/Inc/: main.h  stm32f4xx_hal_conf.h
Core/Src/: freertos.c  gpio.c  main.c
EWARM/: Project.eww  boongBoong.ewd  boongBoong.ewp
MyApp/: gateway.h  receiver.c  sender.c
board_a_engine/: engine_can.h  engine_sim.c
board_b_gateway/: can_rx_debug.c  can_rx_debug.h  gateway_main.c
board_c_uds/: ap_main.c  app_main.c  app_main.h  cli_cmd.c  cli_cmd.h  uds_server.c  uds_server.h
cmake/stm32cubemx/: CMakeLists.txt
common/: can_bsp.c  can_bsp.h  protocol_ids.h
docs/: architecture.md  can_db.md  interface_spec.md  signal_db.txt  team_lead_day1.md  uds_did_map.md
firmware/board_a_engine/: .project  CMakeLists.txt  README.md  stm32f429zi_cli.ioc
firmware/board_a_engine/GUI/: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h
firmware/board_a_engine/MyApp/: adc_driver.c  adc_driver.h  ap.c  ap.h  can_bsp.c  can_bsp.h  cli_cmd.c  cli_cmd.h  engine_can.h  engine_sim.c  engine_sim.h  protocol_ids.h  rx_debug.c  rx_debug.h  sim_bridge.c  sim_bridge.h  uart.h
firmware/board_b_gateway/: CONTRIBUTING.md  README.md
firmware/board_b_gateway/app/: README.md  can_cli_monitor.c  gateway_body_bridge.c  gateway_body_bridge.h  gateway_engine_bridge.c  gateway_engine_bridge.h  gateway_router.c  gateway_router.h  gateway_safety_bridge.c  gateway_safety_bridge.h  gateway_tasks.c  gateway_uds_server.c  gateway_uds_server.h  protocol_ids.h  signal_db.h
firmware/board_b_gateway/docs/: architecture.md  can_db.md  interface_spec.md  signal_db.txt
firmware/board_b_gateway/src/: gateway_main.c
firmware/board_c_uds/: CMakeLists.txt  README.md  README_AUTO_FLOW_CONTROL.txt
firmware/board_c_uds/board_c_uds/: ap_main.c  cli_cmd.c  uds_client.c  uds_client.h
firmware/board_c_uds/common/: protocol_ids.h  uds_defs.h
firmware/board_d_body/: CMakeLists.txt  CMakePresets.json  README.md  board_d_body.ioc
firmware/board_d_body/src/: bcm_body.h  bcm_can.c  bcm_can.h  bcm_cli.c  bcm_cli.h  bcm_input.c  bcm_input.h  bcm_main.c  bcm_signal.c  (+1 more)
firmware/board_e_safety/: CMakeLists.txt  README.md
firmware/board_e_safety/cmake/: gcc-arm-none-eabi.cmake
firmware/board_e_safety/src/: adas_can.c  adas_can.h  adas_input.c  adas_input.h  adas_main.c  adas_main.h  adas_signal.c  adas_signal.h
tools/: uds_cli_test.md
tools/can_cluster_gui/: CMakeLists.txt  README.md  main.cpp
tools/can_cluster_gui/.qtcreator/: CMakeLists.txt.user.01d0a7f
tools/can_cluster_gui/controllers/: BodyController.cpp  BodyController.h  EngineController.cpp  EngineController.h  GatewayController.cpp  GatewayController.h  UdsController.cpp  UdsController.h
tools/can_cluster_gui/core/: SerialDevice.cpp  SerialDevice.h
tools/can_cluster_gui/models/: AppLogModel.cpp  AppLogModel.h
tools/can_cluster_gui/qml/: BodyPage.qml  CanLogPage.qml  DashboardPage.qml  EnginePage.qml  GatewayPage.qml  Main.qml  UdsPage.qml
tools/can_cluster_gui/qml/components/: CanByteRow.qml  GaugeCard.qml  MetricCard.qml  Panel.qml  SerialPanel.qml  StatusPill.qml  UiButton.qml
(+12 files in other folders)
